fix: improve Pagefind UI in dark mode

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,3 +67,16 @@ code * {
 .header-hash:hover {
   opacity: 1;
 }
+
+/* Component: Pagefind Search UI Dark Mode.
+   -------------------------------------------------------------------------- */
+@media (prefers-color-scheme: dark) {
+  /* Duplicated for specificity */
+  :root:root {
+    --pagefind-ui-primary: #eeeeee;
+    --pagefind-ui-text: #eeeeee;
+    --pagefind-ui-background: #152028;
+    --pagefind-ui-border: #152028;
+    --pagefind-ui-tag: #152028;
+  }
+}
